fix(a11y): improve color contrast

--- a/src/components/button/style.scss
+++ b/src/components/button/style.scss
@@ -1,4 +1,3 @@
-@use 'sass:color';
 @use 'config' as *;
 
 .button {
@@ -26,15 +25,6 @@
 	&__primary {
 		background-color: $color_base_carnation;
 		color: $color_base_white;
-	}
-
-	&__secondary {
-		background-color:
-			color.adjust(
-				$color_base_carnation,
-				$hue: 356, $saturation: 5.62, $lightness: 26.67
-			);
-		color: $color_base_carnation;
 	}
 
 	&__plain {
