--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -20,6 +20,6 @@ BODY {
 	background-color:
 		color.adjust(
 			$color_base_carnation,
-			$hue: 356, $saturation: 5.62, $lightness: 26.67
+			$saturation: 28, $lightness: 36
 		);
 }
